Fix number of current page button not being green on mobile

--- a/style.css
+++ b/style.css
@@ -70,7 +70,7 @@ li:not(.menuexpand) > #tutorials-submenu {
     display: none;
 }
 
-#currentpagebtn {
+#currentpagebtn, #currentpagebtn:before {
     color: green;
 }
 
